tests/paczka1/fuzzy1/24168961.err
Error in line 2: sqZVTjs7ue A720 24,8
Error in line 6: sqZVTjs7ue A339 10,7
Error in line 8: Y1RKAw A265 27,2
Error in line 15: sqZVTjs7ue A720 43,3
Error in line 24: dCYPn0qMfSFA720F56,3
Error in line 31: 2nRNwK5H0K A265 -2,7
Error in line 16: 2nRNwK5H0K A265 63,4
Error in line 32: 2nRNwK5H0K A720 3,6
